@@ -161,6 +161,7 @@ of SBCL which maintained the CMU-CL-style split into two packages.)"
                "ASMSTREAM-CONSTANT-VECTOR"
                "JOIN-SECTIONS" "ASSEMBLE-SECTIONS"
                "EMIT" ".ALIGN" ".BYTE" ".SKIP"
+               ".COVERAGE-MARK" ".COMMENT"
                "EMIT-ALIGNMENT" "EMIT-BYTE" "EMIT-BACK-PATCH"
                "EMIT-CHOOSER" "DEFINE-BITFIELD-EMITTER"
                "DEFINE-INSTRUCTION" "DEFINE-INSTRUCTION-MACRO"
@@ -169,7 +170,7 @@ of SBCL which maintained the CMU-CL-style split into two packages.)"
                "MAKE-SEGMENT" "SEGMENT-ORIGIN" "ASSEMBLE"
                "SEGMENT-HEADER-SKEW"
                "INST" "LABEL" "LABEL-P" "GEN-LABEL"
-               "EMIT-LABEL" "LABEL-POSITION"
+               "EMIT-LABEL" "LABEL-POSITION" "LABEL-USEDP"
                "FINALIZE-SEGMENT"
                "SEGMENT-CONTENTS-AS-VECTOR" "WRITE-SEGMENT-CONTENTS"
                "READS" "WRITES" "SEGMENT"
